--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@ body {
 }
 
 .main-background {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.611);
     padding: 20px;
     border-radius: 10px;
-    opacity: 1.5;
-    width: 50%;   
+    opacity: 2.5;
+    width: 70%;   
     margin: 10% auto;
 }
 .main {
@@ -33,11 +33,59 @@ body {
 .header-container h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
+    font-style: oblique;
 }
 
 .header-container p {
     font-size: 1.5rem;
     margin-bottom: 20px;
+}
+
+.btnStart {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+    width: 100px;
+
+}
+.allTasks {
+    position: fixed;
+    inset: 0;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    margin: 10% auto;
+    background-color: rgb(178, 178, 178);
+    border-radius: 10px;
+}
+
+.allTasks-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.main-header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+.allTasks h2 {
+    padding: 10px;
+    text-align: center;
+}
+
+.allTasks h3 {
+    padding: 10px;
 }
 .allTasks input {
     padding: 10px;
@@ -55,12 +103,15 @@ body {
 }
 
 .allTasks ul li {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0);
+    color: white;
     padding: 10px;
     margin: 10px 0;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
 
 .allTasks button {
@@ -70,11 +121,17 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-family: 'Courier New', Courier, monospace;
-
+    width: 100px;
+    margin-top: 20px;
 }	
 
+.btnClose {
+    background-color: rgb(0, 225, 255);
+    
+}
+
 .btnCreate {
-    background-color: rgba(0, 255, 0, 0.486);
+    background-color: rgb(0, 255, 0);
 }
 
 .btnCreate:hover {
@@ -86,6 +143,7 @@ body {
 }
 
 .btnClear:hover {
-    background-color: rgba(255, 0, 0, 0.8);
+    background-color: rgb(197, 2, 2);
 }
+
 
